@@ -1,4 +1,19 @@
+apply plugin: 'java-library'
+
+ext.moduleName = 'uk.co.empyrean.hexagon'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'java.validation'
+        ]
+        classpath = files()
+    }
+}
+
 dependencies {
-    compile group: 'javax.validation', name: 'validation-api'
+    implementation 'javax.validation:validation-api'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
