@@ -1,8 +1,24 @@
+apply plugin: 'java-library'
+
+ext.moduleName = 'uk.co.empyrean.trading.core'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'java.validation',
+                '--add-modules', 'javax.inject',
+                '--add-modules', 'java.validation',
+                '--add-modules', 'spring.context',
+                '--add-modules', 'uk.co.empyrean.hexagon',
+        ]
+        classpath = files()
+    }
+}
+
 dependencies {
     implementation project(':hexagon-common')
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'javax.inject:javax.inject'
     implementation 'javax.validation:validation-api'
