@@ -1,12 +1,32 @@
+
+apply plugin: 'java-library'
+
+ext.moduleName = 'uk.co.empyrean.trading.adapters.driven'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'java.persistence',
+                '--add-modules', 'spring.context',
+                '--add-modules', 'spring.data.jpa',
+                '--add-modules', 'spring.data.commons',
+                '--add-modules', 'spring.boot.starter.aop',
+                '--add-modules', 'spring.boot.starter.data.jpa',
+                '--add-modules', 'uk.co.empyrean.trading.core',
+        ]
+        classpath = files()
+    }
+}
+
 dependencies {
     implementation project(':trade-application')
 
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
     implementation 'javax.inject:javax.inject'
+    implementation 'org.postgresql:postgresql'
+    implementation 'org.springframework:spring-beans'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.h2database:h2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
